centering canvas in popup add more site res to service worker fix page to canvas coord converter when canvas is stretched in a way that does not keep aspect ratio

--- a/popup/style.css
+++ b/popup/style.css
@@ -1,18 +1,14 @@
-@media (prefers-color-scheme: dark) {
-	body {
-		background-color: black;
-		color: white;
-	}
-}
-
 body {
+	background: black;
 	margin: 0;
 }
 
 #main-canvas {
 	background: black;
-	max-width: 100%;
-	max-height: 100%;
-	width: auto;
-	height: auto;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
